# react-native-bls-signatures

./: .clang-format  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  postProcess.js  react-native-bls-signatures.podspec  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/dummy/: CMakeLists.txt
android/libs/: blst-0.3.11-beta-1.aar  libsodium-1.0.19.0.aar
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: AugSchemeMPLHostObject.cpp  AugSchemeMPLHostObject.h  BasicSchemeMPLHostObject.cpp  G1ElementHostObject.cpp  G1ElementHostObject.h  G2ElementHostObject.cpp  G2ElementHostObject.h  PopSchemeMPLHostObject.cpp  PopSchemeMPLHostObject.h  PrivateKeyHostObject.cpp  PrivateKeyHostObject.h  cpp-adapter.cpp
android/src/main/java/com/bip39/: BlsModule.java
android/src/main/java/com/bls/: BlsModule.java  BlsPackage.java
android/src/main/java/com/facesdk/: BlsModule.java  BlsPackage.java
android/src/main/java/com/reactnativebls/: BlsSignaturesModule.java  BlsSignaturesPackage.java
android/src/newarch/: BlsSpec.java
android/src/oldarch/: BlsSpec.java
cpp/: .clang-format  AugSchemeMPLHostObject.cpp  AugSchemeMPLHostObject.h  BasicSchemeMPLHostObject.cpp  BasicSchemeMPLHostObject.h  BlsRuntimeLifecycleMonitor.cpp  BlsRuntimeLifecycleMonitor.h  G1ElementHostObject.cpp  G1ElementHostObject.h  G2ElementHostObject.cpp  G2ElementHostObject.h  JsiAugSchemeMPL.h  JsiBasicSchemeMPL.h  JsiBlsApi.cpp  JsiBlsApi.h  JsiBlsHostObject.cpp  JsiBlsHostObject.h  JsiBlsHostObjects.h  JsiBlsMutableBuffer.h  JsiG1Element.h  JsiG2Element.h  JsiGTElement.h  JsiHKDF256.h  JsiHostObject.cpp  JsiHostObject.h  JsiPopSchemeMPL.h  JsiPrivateKey.h  NativeBlsModule.cpp  NativeBlsModule.h  PopSchemeMPLHostObject.cpp  PopSchemeMPLHostObject.h  PrivateKeyHostObject.cpp  PrivateKeyHostObject.h  RNBlsLog.h  RNBlsRuntimeAwareCache.cpp  RNBlsRuntimeAwareCache.h  RNBlsUtils.cpp  RNBlsUtils.h  RuntimeAwareCache.cpp  RuntimeAwareCache.h  (+8 more)
cpp/JSI Utils/: TypedArray.h
cpp/base/: elements.hpp  privatekey.cpp
cpp/include/: bbs.h
cpp/include/bls/: elements.hpp
cpp/wrappers/: AugSchemeMPLHostObject.h  BasicSchemeMPLHostObject.h  G1ElementHostObject.h  G2ElementHostObject.h  PopSchemeMPLHostObject.cpp  PopSchemeMPLHostObject.h  PrivateKeyHostObject.h
example/: app.json  babel.config.js  index.js  index.tsx  package.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/blsexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/blssignaturesexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/java/com/example/reactnativeblobjsihelper/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/example/reactnativebls/: MainActivity.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/BlobJsiHelperExample/: LaunchScreen.storyboard
example/ios/BlobJsiHelperExample.xcodeproj/: project.pbxproj
example/ios/BlsSignaturesExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/BlsSignaturesExample.xcodeproj/: project.pbxproj
example/ios/BlsSignaturesExample.xcodeproj/xcshareddata/xcschemes/: BlsSignaturesExample.xcscheme
example/ios/BlsSignaturesExample.xcworkspace/: contents.xcworkspacedata
example/ios/BlsSignaturesExampleTests/: BlsSignaturesExampleTests.m
example/src/: App.tsx
example/src/components/: Button.tsx  Checkbox.tsx  Indentator.tsx  ResultItem.tsx  Suite.tsx  TestItem.tsx
example/src/hooks/: useRunTests.ts  useTestList.ts
example/src/navigators/children/Entry/: Entry.tsx
example/src/navigators/children/TestingScreen/: TestingScreen.tsx
example/src/navigators/children/benchmarks/: Benchmarks.tsx
example/src/testing/: MochaRNAdapter.ts  MochaSetup.ts  TestList.ts
example/src/testing/Tests/: chia.ts  classes.ts  eip2333.ts  errorhandling.ts  hkdf.ts  ietf.ts  keygen.ts  privateKey.ts  schemes.ts  unhardendHDKeys.ts  utils.ts
example/src/tests/: Bridge.test.ts  PrivateKey.test.ts  PublicKey.test.ts  Signature.test.ts  index.test.ts
ios/: AugSchemeMPLHostObject.h  AugSchemeMPLHostObject.mm  Bls.h  Bls.mm  BlsOnLoad.mm  BlsSignatures.h  BlsSignatures.mm  G1ElementHostObject.h  G1ElementHostObject.mm  PrivateKeyHostObject.h  PrivateKeyHostObject.mm
ios/BlsSignatures.xcodeproj/: project.pbxproj
ios/Clibblst.xcframework/: Info.plist
ios/Clibblst.xcframework/ios-arm64/Headers/: module.modulemap
ios/Clibsodium.xcframework/: Info.plist
ios/Frameworks/BlsSignatures.xcframework/: Info.plist
ios/Frameworks/BlsSignatures.xcframework/ios-arm64/: Headers
ios/Frameworks/BlsSignatures.xcframework/ios-simulators/include/: module.modulemap
ios/Frameworks/Blst.xcframework/: Info.plist
ios/Frameworks/BlstSignatures.xcframework/: Info.plist
ios/Frameworks/BlstSignatures.xcframework/ios-simulators/Headers/: module.modulemap
ios/Frameworks/Clibsodium.xcframework/: Info.plist
ios/Frameworks/Clibsodium.xcframework/ios-arm64_armv7_armv7s/: libsodium.dylib
ios/Frameworks/Sodium.xcframework/: Info.plist
ios/Frameworks/Sodium.xcframework/ios-simulators/: libsodium.dylib
ios/bls/: bls.cpp  elements.hpp
new/: types.ts
src/: Bls.ts  KeyDerivation.ts  ModuleNotFoundError.ts  NativeBls.ts  index.ts  index.tsx
src/types/: AugSchemeMPL.ts  BasicSchemeMPL.ts  Bls.ts  G1Element.ts  G2Element.ts  GTElement.ts  HKDF256.ts  PopSchemeMPL.ts  PrivateKey.ts  TypescriptTypes.txt  Utils.ts  index.ts
src/types/elements/: G1Element.ts  G2Element.ts
src/types/schemes/: AugSchemeMPL.ts  BasicSchemeMPL.ts  PopSchemeMPL.ts
